syntax = "proto3";

option go_package = ".";

package server23;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc CallThree (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}